# Argz

./: CMakeLists.txt  README.md
examples/: main.c
include/argz/: argz.h
src/: argz.c
